# CSCI202-Final-Project

./: .gitignore  README.md
backend/: CMakeLists.txt  music_player.cpp  music_player.h  music_player_pybind.cpp
frontend/: main.py  requirements.txt
